# rtbot

./: .bazelrc  .clang-format  .clangd  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierrc.js  AGENTS.md  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl  firebase.json  format.sh  package.json  pnpm-lock.yaml  requirements-lock.txt  tsconfig.json
apps/benchmark/: BUILD.bazel
apps/benchmark/baseline/: 2026-04-17-phase0.csv
apps/benchmark/src/: benchmark.cpp  fused_bench.cpp
apps/cli/: BUILD.bazel  tsconfig.bazel.json  tsconfig.json
apps/cli/src/: index.ts  table.tsx
apps/iot/pico/: BUILD.bazel
apps/rtbot-server/: BUILD.bazel  README.md
apps/rtbot-server/src/: push_redis_service.rs  ws_client.rs  ws_handlers.rs
apps/studio/: BUILD.bazel  README.md  WORKSPACE  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
apps/studio/src/: App.tsx  index.css  main.tsx  routes.tsx
compiler/: BUILD.bazel  README.md
compiler/antlr4/: BUILD.bazel  rtbot.g4
compiler/include/: RtBotVisitor.h
compiler/src/: RtBotVisitor.cpp  rtbot.cpp
docs/site/: BUILD.bazel  README.md  docusaurus.config.js  package-lock.json  tailwind.config.js
docs/site/blog/: 2019-05-28-first-blog-post.md
docs/site/docs/: design-principles.md  intro.md
libs/: CMakeLists.txt  Cargo.toml
libs/api/: BUILD.bazel  CMakeLists.txt  README.md  package.json
libs/api/proto/: BUILD.bazel  RtBot.proto  buf.gen.yaml  buf.yaml
libs/api/src/: FactoryOp.cpp  Program.cpp  bindings.cpp
libs/api/test/: BUILD.bazel  integration_test_basic_flow_program.cpp  integration_test_bollinger_bands.cpp  integration_test_rsi.cpp  integration_test_rsi_program.cpp  parity_helper.h  test_bindings.cpp  test_bollinger_bands_generated.cpp  test_demultiplexer_pipeline.cpp  test_diagnostics.cpp  test_integration_bollinger_bands.cpp  test_json_schema_validation.cpp  test_misc_pipeline.cpp  test_operator_json.cpp  test_pipeline_op.cpp  test_program.cpp  test_program_collect_restore.cpp  test_rsi_generated.cpp  test_trigger_set.cpp
libs/api/wasm/: emscripten-bindings.cpp
libs/compiled/: BUILD.bazel
libs/compiled/jit/: BUILD.bazel  DEPLOYMENT.md
libs/core/: BUILD.bazel  CMakeLists.txt  README.md
libs/core/api/: BUILD.bazel  CMakeLists.txt  package.json
libs/core/finance/: BUILD.bazel  CMakeLists.txt
libs/core/lib/: BUILD.bazel  CMakeLists.txt
libs/core/std/: BUILD.bazel  CMakeLists.txt
libs/core/test/: BUILD.bazel  CMakeLists.txt  README.md  ma.json  op_list.json  ppg.json  test_base64.cpp  test_buffer.cpp  test_collector.cpp  test_composite.cpp  test_demultiplexer.cpp  test_group.cpp  test_input.cpp  test_join.cpp  test_message_pool.cpp  test_multiplexer.cpp  test_output.cpp  test_peak_detector.cpp  test_pipeline.cpp  test_resamplers.cpp  test_state_serialization.cpp  tools.h
libs/extension/: BUILD.bazel
libs/extension/test/: BUILD.bazel  benchmark_lua_operator.cpp  test_lua_operator.cpp
libs/finance/: BUILD.bazel
libs/finance/test/: BUILD.bazel  CMakeLists.txt  test_relative_strength_index.cpp
libs/fuse/: BUILD.bazel
libs/fuse/test/: BUILD.bazel  test_burst_aggregate.cpp  test_fused_batched.cpp  test_fused_bytecode.cpp  test_fused_expression.cpp  test_fused_expression_vector.cpp  test_fused_parity_fuzz.cpp  test_fused_parity_golden.cpp  test_fused_parity_per_opcode.cpp  test_fused_state_layout.cpp  test_fused_windowed.cpp
libs/postgres/: BUILD.bazel  tsconfig.json
libs/postgres/prisma/: schema.prisma
libs/postgres/src/: index.ts
libs/redis/: BUILD.bazel  README.md
libs/redis-module/: BUILD.bazel  Cargo.toml  README.md
libs/redis-module/cxx/: bindings.cpp  cxx_bindings.cpp
libs/redis-module/include/: bindings.h  cxx_bindings.h
libs/redis-module/src/: cxx_bindings.rs  lib.rs  pipelines_manager.rs  pipelines_registry.rs  program_json_schema.rs  program_validator.rs
libs/redis/include/: module.h
libs/redis/src/: module.cpp
libs/rtbot-rs/: BUILD.bazel  Cargo.toml
libs/rtbot-rs/cxx/: cxx_bindings.cpp
libs/rtbot-rs/src/: lib.rs
libs/rtbot-server/: BUILD.bazel  Cargo.toml
libs/rtbot-server/resources/: rtbot-server.toml
libs/rtbot-server/src/: config.rs  main.rs  pull_redis_service.rs  push_redis_service.rs  redis_service.rs  ws_handlers.rs
libs/std/: BUILD.bazel  CMakeLists.txt
libs/std/test/: BUILD.bazel  CMakeLists.txt  integration_test_ppg.cpp  integration_test_rsi.cpp  test_add.cpp  test_and.cpp  test_arithmetic_scalar.cpp  test_arithmetic_sync.cpp  test_auto_regressive.cpp  test_batch_single_parity.cpp  test_boolean_sync.cpp  test_boolean_sync_binary_op.cpp  test_boolean_to_number.cpp  test_clip.cpp  test_compare_scalar.cpp  test_compare_sync.cpp  test_composite.cpp  test_constant.cpp  test_constant_resampler.cpp  test_cosine_resampler.cpp  test_count.cpp  test_cumulative_product.cpp  test_cumulative_sum.cpp  test_difference.cpp  test_division.cpp  test_equal_to.cpp  test_fast_fourier_transform.cpp  test_fast_fourrier_transform.cpp  test_filter_scalar.cpp  test_filter_scalar_op.cpp  test_filter_sync.cpp  test_finite_impulse_response.cpp  test_function.cpp  test_fused_expression.cpp  test_fused_expression_vector.cpp  test_greater_than.cpp  test_greater_than_stream.cpp  test_hermite_resampler.cpp  test_identity.cpp  test_ignore.cpp  (+39 more)
libs/wrappers/java/: BUILD.bazel  rtbot_jni.cpp
libs/wrappers/javascript/: BUILD.bazel  package.json  tsconfig.bazel.json  tsconfig.json
libs/wrappers/python/: BUILD.bazel  CMakeLists.txt  README.md  rtbot.cpp  rtbot.py  rtbot_test.py  rtbotx.py  setup.py
services/identity/: BUILD.bazel
services/identity/src/: app.controller.ts  app.service.ts  index.ts  main.ts
tools/generator/: BUILD.bazel  generator.bzl  tsconfig.json
tools/generator/src/: handlebars.ts  index.ts
tools/generator/templates/: jsonschema.hbs  parameters-md.hbs  python.hbs  typescript.hbs  usage-md.hbs
web/: .bazelrc  .firebaserc  BUILD.bazel  WORKSPACE  package.json  pnpm-lock.yaml  tailwind.config.cjs
web/apps/studio/: BUILD.bazel  WORKSPACE_OLD  firebase.json  index.html  tailwind.config.cjs  tsconfig.json  (+2 more)
(+749 files in other folders)
