load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")

package(default_visibility = ["//visibility:public"])

exports_files(["package.json"])

config_setting(
    name = "enable_telemetry",
    define_values = {
        "telemetry": "false",
    },
)

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.bazel.json",
)

npm_link_package(
    name = "node_modules/@rtbot-dev/wasm",
    src = "//libs/api:js",
)

npm_link_package(
    name = "node_modules/@rtbot-dev/rtbot",
    src = "//libs/wrappers/javascript:js",
)

js_library(
    name = "package_json",
    srcs = ["package.json"],
)

# Global version computation that can be reused across all targets
write_file(
    name = "version_tmpl",
    out = "version.txt.tmpl",
    content = ["{{RTBOT_VERSION}}"],
)

expand_template(
    name = "version",
    out = "version.txt",
    stamp_substitutions = {"{{RTBOT_VERSION}}": "{{RTBOT_VERSION}}"},
    template = ":version_tmpl",
)
