load("@npm//:vite/package_json.bzl", "bin")
load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

_DEPS = glob([
    "public/**/*",
    "src/**/*",
]) + [
    "index.html",
    "vite.config.ts",
    "tsconfig.json",
    "tsconfig.node.json",
] + [
    "//:node_modules/react",
    "//:node_modules/react-dom",
    "//:node_modules/@types/react",
    "//:node_modules/@types/react-dom",
    "//:node_modules/@vitejs/plugin-react-swc",
    "//:node_modules/typescript",
    "//:node_modules/vite",
]

js_run_devserver(
    name = "dev",
    args = [],
    command = "node_modules/.bin/vite",
    data = _DEPS,
)

bin.vite_binary(
    name = "build",
    args = ["build"],
    chdir = package_name(),
    data = _DEPS,
)
