load("@npm//:vite/package_json.bzl", "bin")
load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages()

_DEPS = glob([
    "public/**/*",
    "src/**/*",
    "*.cjs",
    "*.js",
]) + [
    "index.html",
    "vite.config.ts",
    "tsconfig.json",
    "tsconfig.node.json",
] + [
    "//:node_modules/react",
    "//:node_modules/react-dom",
    "//:node_modules/react-router-dom",
    "//:node_modules/firebase",
    "//:node_modules/firebase-tools",
    "//:node_modules/rxjs",
    "//:node_modules/tailwindcss",
    "//:node_modules/autoprefixer",
    "//:node_modules/@headlessui/react",
    "//:node_modules/zod",
    "//:node_modules/@types/react",
    "//:node_modules/@types/react-dom",
    "//:node_modules/@vitejs/plugin-react-swc",
    "//:node_modules/typescript",
    "//:node_modules/vite",
    "//:node_modules/vite-tsconfig-paths",
]

js_run_devserver(
    name = "dev",
    args = ["--host"],
    command = "node_modules/.bin/vite",
    data = _DEPS,
)

bin.vite_binary(
    name = "run",
    args = ["--host"],
    chdir = package_name(),
    data = _DEPS,
    tags = ["ibazel_notify_changes"],
)
