load("@npm//:@docusaurus/core/package_json.bzl", docusaurus_bin = "bin")
load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")

copy_to_directory(
    # Name of the rule.
    name = "md",
    srcs = ["//libs/core/lib:md", "//libs/core/std:md"],
    out = "docs/operators",
    replace_prefixes = {
      "libs/core/lib/include/rtbot": "core",
      "libs/core/std/include/rtbot/std": "std",
    }
)

docusaurus_bin.docusaurus_binary(
    name = "build",
    # TODO: compute the output dir
    args = ["build", "docs/site", "--out-dir /home/robert/Documents/rtbot-dev/rtbot/build"],
    data = glob(
        ["**/*"],
        exclude = ["node_modules/**/*"],
    ) + [
        ":md",
        "//:package_json",
        "//:node_modules/@docusaurus/core",
        "//:node_modules/@docusaurus/preset-classic",
        "//:node_modules/@mdx-js/react",
        "//:node_modules/@radix-ui/colors",
        "//:node_modules/clsx",
        "//:node_modules/prism-react-renderer",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/remark-math",
        "//:node_modules/rehype-katex",
    ],
)

docusaurus_bin.docusaurus_binary(
    name = "start",
    # TODO: compute the output dir
    args = ["start", "docs/site"],
    data = glob(
        ["**/*"],
        exclude = ["node_modules/**/*"],
    ) + [
        ":md",
        "//:package_json",
        "//:node_modules/@docusaurus/core",
        "//:node_modules/@docusaurus/preset-classic",
        "//:node_modules/@mdx-js/react",
        "//:node_modules/clsx",
        "//:node_modules/prism-react-renderer",
        "//:node_modules/react",
        "//:node_modules/react-dom",
    ],
    tags = ["ibazel_notify_changes"],
)

