load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["include/**/*.md"]))

filegroup(
    name = "md",
    srcs = glob([
        "include/**/*.md",
    ]),
)

filegroup(
    name = "srcs",
    srcs = glob([
        "include/**/*.h",
        "src/**/*.cpp",
    ]),
)

cc_library(
    name = "rtbot",
    srcs = glob([
        "src/**/*.cpp",
    ]),
    hdrs = glob(["include/**/*.h"]),
    copts = [
        "-O3",
    ],
    includes = ["include"],
    visibility = ["//visibility:public"],
    deps = [
        "@io_opentelemetry_cpp//api",
        "@io_opentelemetry_cpp//exporters/otlp:otlp_http_exporter",
        "@io_opentelemetry_cpp//sdk/src/trace",
    ],
)
