file(GLOB lib_SRC CONFIGURE_DEPENDS "include/rtbot/*.h" "src/*.cpp")
add_library(${PROJECT_NAME} STATIC ${lib_SRC})


set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)

target_include_directories(${PROJECT_NAME} PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)
