load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")

rust_shared_library(
    name = "redis-rtbot",
    srcs = glob(["src/**/*"]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = [
        "//libs/core/lib:rtbot_bindgen",
    ] + all_crate_deps(
        normal = True,
    ),
)
