load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/cxx:rust_cxx_bridge.bzl", "rust_cxx_bridge")

rust_shared_library(
    name = "redis-rtbot",
    srcs = glob(["src/**/*"]),
    aliases = aliases(),
    edition = "2021",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = [
        "//libs/rtbot-rs:rtbot-rs",
    ] + all_crate_deps(
        normal = True,
    ),
)
